[gd_scene load_steps=2 format=3 uid="uid://dt3sc13gk1nww"]

[ext_resource type="Script" uid="uid://d32qsw84hum8" path="res://scripts/character_info_window.gd" id="1_8r5yb"]

[node name="CharacterInfoWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8r5yb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -160.0
offset_right = 320.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 179.0
offset_top = 15.0
offset_right = 226.0
offset_bottom = 38.0
text = "Name"

[node name="OccupationLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 181.0
offset_top = 44.0
offset_right = 270.0
offset_bottom = 67.0
text = "Occupation"

[node name="AgeLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 336.0
offset_top = 18.0
offset_right = 376.0
offset_bottom = 41.0
text = "Age"

[node name="DescriptionLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 161.0
offset_right = 627.0
offset_bottom = 314.0
text = "Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
Phasellus ultricies vel enim at volutpat. 
Fusce sit amet magna gravida, suscipit purus finibus, varius arcu. 
Quisque iaculis imperdiet tellus, faucibus sagittis nisl condimentum at. 
Vivamus non sem porttitor, semper turpis at, suscipit massa. 
"
autowrap_mode = 3

[node name="KillButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.503
anchor_top = -0.508
anchor_right = -0.503
anchor_bottom = -0.508
offset_left = 917.92
offset_top = 442.56
offset_right = 949.92
offset_bottom = 473.56
text = "Kill"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 573.0
offset_top = 11.0
offset_right = 623.0
offset_bottom = 42.0
text = "Close"

[node name="Dialogue" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -1.0
offset_top = -134.0
offset_right = 642.0
offset_bottom = -67.0
